add base style to css

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
 html {
     box-sizing: border-box;
-  }
-  
-  *,
-  ::after,
-  ::before {
-    box-sizing: inherit;
-  }
+}
 
-  
+*,
+::after,
+::before {
+    box-sizing: inherit;
+}
+.footer{
+    margin-top: 20px;
+    text-align: center;
+    font-size: 12px;
+}
