--- a/css/list.css
+++ b/css/list.css
@@ -1,31 +1,39 @@
-.list{
+.list {
     padding: 15px;
     list-style: none;
 }
-.list__itemContainer{
+
+.list__itemContainer {
     display: grid;
-    grid-template-columns: 1fr 10fr 1fr;      
+    grid-template-columns: 1fr 10fr 1fr;
     padding: 15px;
     border-bottom: 1px solid lightgray;
+    align-items: center;
 }
 
-.list__item{
+.list__item {
+    margin: 20px;
     display: flex;
-    align-items: center;     
+    align-items: center;
+    flex-wrap: wrap;
 }
-.list__item--done{
+
+.list__item--done {
     text-decoration: line-through;
 }
-.list__button{
+
+.list__button {
     border: none;
     background-color: green;
     color: white;
     width: 30px;
     height: 30px;
 }
-.list__button:active{
+
+.list__button:active {
     border: 3px solid black;
 }
-.list__button--red{
+
+.list__button--red {
     background-color: red;
 }
