--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+.main {
+    margin: 20px;
+}
+
 .main__subtitle {
     min-width: 100%;
     font-size: 18px;
@@ -6,10 +10,12 @@
     border: 1px solid lightgray;
     margin-bottom: 0px;
 }
+
 .main__subtitle--padding {
-padding: 30px 10px
+    padding: 30px 10px
 }
-.main__div{
+
+.main__div {
     max-width: 100%;
     margin-top: 0px;
     padding: 20px;
@@ -17,6 +23,7 @@ padding: 30px 10px
     border: 1px solid lightgray;
     margin-bottom: 0px;
 }
-.main__div--minHeight{
+
+.main__div--minHeight {
     min-height: 120px;
 }
