--- a/css/form.css
+++ b/css/form.css
@@ -23,7 +23,7 @@
     border-style: solid;
 }
 
-@media (orientation: portrait) {
+@media (max-width: 767px) {
     .form {
         display: flex;
         flex-direction: column;
