--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 }
 
 .main__subtitle {
-    min-width: 100%;
+    max-width: 100%;
     font-size: 18px;
     padding: 10px;
     background-color: white;
