--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 }
 
 .main__subtitle {
+    padding: 30px 30px;
     max-width: 100%;
     font-size: 18px;
     padding: 10px;
@@ -12,7 +13,7 @@
 }
 
 .main__subtitle--padding {
-    padding: 30px 10px
+    
 }
 
 .main__div {
