--- a/css/form.css
+++ b/css/form.css
@@ -30,12 +30,12 @@
     }
 
     .form__button {
-        min-width: 100%;
-        margin: 0;
+        max-width: 100%;
+        margin: auto;
 
     }
-
     .form__input {
-        min-width: 100%;
+        margin: auto;
     }
+
 }
