--- a/css/form.css
+++ b/css/form.css
@@ -35,8 +35,8 @@
 
     }
     .form__input {
-        width: 80%;
-        margin: auto;
+        width: 100%;
+        margin-right: 20px;
     }
 
 }
