--- a/css/form.css
+++ b/css/form.css
@@ -11,8 +11,7 @@
     background-color: teal;
     color: white;
     padding: 10px;
-    margin-right: 20px;
-
+    margin: 10px;
 }
 
 .form__input {
