--- a/css/form.css
+++ b/css/form.css
@@ -13,7 +13,12 @@
     padding: 10px;
     margin: 10px;
 }
-
+.form__button:hover{
+    background-color: hsl(180, 100%, 30%);
+}
+.form__button:active{
+    background-color: hsl(180, 100%, 35%);
+}
 .form__input {
     box-sizing: border-box;
     display: inline-block;
