--- a/css/list.css
+++ b/css/list.css
@@ -25,7 +25,7 @@
 
 .list__button {
     border: none;
-    background-color: green;
+    background-color: rgb(2, 92, 2);
     color: white;
     width: 30px;
     height: 30px;
@@ -33,8 +33,20 @@
 
 .list__button:active {
     border: 3px solid black;
+    background-color: rgb(24, 173, 24);
+}
+
+.list__button:hover {
+    background-color: rgb(8, 128, 8);
 }
 
 .list__button--red {
+    background-color: rgb(192, 3, 3);
+}
+
+.list__button--red:hover {
     background-color: red;
+}
+.list__button--red:active {
+    background-color: rgb(245, 40, 40);
 }
