--- a/css/form.css
+++ b/css/form.css
@@ -12,9 +12,11 @@
     color: white;
     padding: 10px;
     margin: 10px;
+    transition: 1s;
 }
 .form__button:hover{
     background-color: hsl(180, 100%, 30%);
+    transform: scale(1.2);
 }
 .form__button:active{
     background-color: hsl(180, 100%, 35%);
@@ -22,8 +24,7 @@
 .form__input {
     box-sizing: border-box;
     display: inline-block;
-    max-width: 100%;
-    padding: 9px;
+    padding: 10px;
     border-color: lightgray;
     border-style: solid;
 }
