--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@
 
 .main__subtitle--lower{
     font-size: 20px;
+    align-self:  flex-start;
 }
 .main__div {
     max-width: 100%;
@@ -50,3 +51,16 @@
     grid-gap: 20px;
     align-items: center;      
 }
+.main__button:disabled{
+    color: rgba(128, 128, 128, 0.39);
+}
+@media (max-width: 767px){
+    .main__button{
+        width: 100%;
+    }
+    .main__subtitle--grid{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap
+    }
+};
